--- a/SunDofus/TODO.txt
+++ b/SunDofus/TODO.txt
@@ -1,4 +1,2 @@
-﻿//A FAIRE AVANT LA 3.1.X
-
-Revoir les droits des modérateurs / administrateurs / animateurs
+﻿Revoir les droits des modérateurs / administrateurs / animateurs
 Faire les conditions des items et les armes à deux mains + bouclier, ...
