--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
 -> Faire une condition pour la file d'attente du REALM (Si le dernier client connecté s'est connecté il y a moins de 2 secondes par exemple)
 -> Faire la file d'attente du serveur de jeu.
 -> Ajouter les conditions des droits de guilde.
--> Finir la révision totale du code.
+-> Finir la révision totale du code -> OK (16.10.2013) !
